<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="toast_notification_denied">Notification permission denied</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_option_load_app">LoadApp - Current repository by Udacity</string>
    <string name="radio_option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="button_download">Download</string>

    <string name="button_download_select_nothing">Please select a repo to download</string>


    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_notification_channel_name">Download</string>
    <string name="detail_activity_button">OK</string>
    <string name="detail_activity_file_name_label">File name:</string>
    <string name="detail_activity_status_label">Status:</string>

</resources>
