<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radioGroup_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_app_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_option_glide" />

        <RadioButton
            android:id="@+id/radioButton_app_loadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_option_load_app" />

        <RadioButton
            android:id="@+id/radioButton_app_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_option_retrofit" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:progressBarColor="@color/colorPrimaryDark"
        app:buttonBackgroundColor="@color/colorPrimary"
        app:progressBarCircleColor="@color/colorAccent"
        app:buttonTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>