<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TableLayout
        android:id="@+id/detail_table_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/table_file_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_activity_file_name_label"
               />
            <TextView
                android:id="@+id/table_file_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_activity_file_name_label"
               />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/table_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_activity_status_label" />
            <TextView
                android:id="@+id/table_status_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/detail_activity_file_name_label" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/detail_activity_confirm_button"
        android:layout_width="match_parent"
        android:text="@string/detail_activity_button"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.motion.widget.MotionLayout>